--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,14 +92,14 @@
             android:layout_marginBottom="24dp" />
 
         <!-- Nút Đăng nhập -->
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonLogin"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="Đăng nhập"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:background="@drawable/button_primary"
+            android:background="@drawable/bg_button_checkout"
             android:layout_marginBottom="24dp" />
 
         <!-- Chuyển sang đăng ký -->
