--- a/app/src/main/res/layout/header_product_detail.xml
+++ b/app/src/main/res/layout/header_product_detail.xml
@@ -14,6 +14,7 @@
         android:src="@drawable/ic_back"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="Back"
+        android:layout_marginTop="5dp"
         android:layout_alignParentStart="true"/>
 
     <!-- Tiêu đề -->
