--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -1,10 +1,34 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@android:color/white">
-    <TextView
-        android:text="📅 Booking Fragment"
-        android:layout_gravity="center"
-        android:textSize="24sp" android:textStyle="bold"
-        android:textColor="@android:color/black"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
-</FrameLayout>
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/darker">
+
+    <!-- Phần nội dung có thể cuộn -->
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/scroll_booking_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:fillViewport="true"
+        android:overScrollMode="never">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- Include từng phần layout nhỏ -->
+            <include layout="@layout/layout_booking_header" />
+            <include layout="@layout/layout_booking_customer" />
+            <include layout="@layout/layout_booking_datetime" />
+            <include layout="@layout/layout_booking_guest" />
+            <include layout="@layout/layout_booking_note" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
+    <!-- Footer: luôn cố định dưới cùng -->
+    <include layout="@layout/layout_booking_footer" />
+
+</LinearLayout>
