--- a/app/src/main/res/layout/item_cart_product.xml
+++ b/app/src/main/res/layout/item_cart_product.xml
@@ -49,16 +49,17 @@
 
                 <ImageButton
                     android:id="@+id/button_remove"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
                     android:layout_alignParentEnd="true"
                     android:background="@android:color/transparent"
                     android:src="@drawable/ic_close"
-                    android:contentDescription="Remove" />
+                    android:contentDescription="Remove"
+                    android:layout_margin="10dp"/>
             </RelativeLayout>
 
             <!-- Product Note -->
-            <TextView
+            <EditText
                 android:id="@+id/text_product_note"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
